@@ -34,19 +34,25 @@ test -f "$INSTALL_ROOT/var/opendnssec/signed/root" &&
 log_this validate-zone-ods validns -s -p all "$INSTALL_ROOT/var/opendnssec/signed/ods" &&
 log_grep validate-zone-ods stdout 'validation errors:   0' &&
 
+## Restart signer, so that a xfrd.state file is written and we can test the
+## contents. [SUPPORT-147]
+ods_ods-control_signer_stop &&
+ods_ods-control_signer_start &&
+grep ';;Serial: xfr 2014102300' "$INSTALL_ROOT/var/opendnssec/tmp/ods.xfrd-state" &&
+
 ## Bump verbosity (for grepping important syslog lines)
 ods-signer verbosity 5 &&
 
 ## Fake notify
-ldns-notify -p 15354 -s 1001 -r 2 -z ods 127.0.0.1 &&
+ldns-notify -p 15354 -s 2014102301 -r 2 -z ods 127.0.0.1 &&
 
 ## Request IXFR/UDP
-syslog_waitfor 10 'ods-signerd: .*\[xfrd\] zone ods request udp/ixfr=1000 to 127\.0\.0\.1' &&
+syslog_waitfor 10 'ods-signerd: .*\[xfrd\] zone ods request udp/ixfr=2014102300 to 127\.0\.0\.1' &&
 syslog_waitfor 10 'ods-signerd: .*\[xfrd\] zone ods received too short udp reply from 127\.0\.0\.1, retry tcp' &&
 
 ## Request IXFR/TCP
-syslog_waitfor 10 'ods-signerd: .*\[xfrd\] zone ods request tcp/ixfr=1000 to 127\.0\.0\.1' &&
-syslog_waitfor 10 'ods-signerd: .*\[xfrd\] reschedule task for zone ods: disk serial=1001 acquired=.*, memory serial=1000 acquired=.*' &&
+syslog_waitfor 10 'ods-signerd: .*\[xfrd\] zone ods request tcp/ixfr=2014102300 to 127\.0\.0\.1' &&
+syslog_waitfor 10 'ods-signerd: .*\[xfrd\] reschedule task for zone ods: disk serial=2014102301 acquired=.*, memory serial=2014102300 acquired=.*' &&
 syslog_waitfor_count 60 2 'ods-signerd: .*\[STATS\] ods' &&
 
 ## Retransfer
